Change oapi spec to add login/register user
